[package]
name = "mmcai_rs"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[dependencies]
base64 = "0.22.0"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
rand = "0.8.5"
assert_fs = "1.1.1"
fake = "2.9.2"
